parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    ANY
    AS
    ASSERTS
    ASYNC
    AWAIT
    BREAK
    CASE
    CATCH
    CLASS
    COMMENT
    COMMENTMULTI
    CONSTRUCTOR
    CONTINUE
    DEBUGGER
    DECLARE
    DEFAULT
    DELETE
    DO
    DOT
    DQUOTE
    ENUM
    EXPORT
    EXTENDS
    FINALLY
    FROM
    GET
    GLOBAL
    IMPLEMENTS
    IMPORT
    IN
    INFER
    INSTANCEOF
    INTERFACE
    INTERNAL
    IS
    KEYOF
    MODULE
    NAMESPACE
    NEVER
    NEW
    NULL
    OBJECT
    OF
    PACKAGE
    PRIVATE
    PROTECTED
    PUBLIC
    READONLY
    REQUIRE
    SET
    SQUOTE
    STATIC
    SUPER
    SWITCH
    SYMBOL
    THIS
    THROW
    TRY
    TYPE
    TYPEOF
    UNDEFINED
    UNIQUE
    UNKNOWN
    WITH
    YIELD

Grammar

Rule 0     S' -> programa
Rule 1     programa -> funcdecl
Rule 2     programa -> funcdecl programa
Rule 3     programa -> comandos
Rule 4     programa -> comandos programa
Rule 5     vardecl -> tipodecl ID COLON tipo
Rule 6     vardecl -> tipodecl ID COLON tipo ASSIGN expressao
Rule 7     vardecl -> tipodecl ID COLON tipo LBRACKET RBRACKET ASSIGN LBRACKET RBRACKET
Rule 8     vardecl -> tipodecl ID COLON tipo LBRACKET RBRACKET ASSIGN LBRACKET listexp RBRACKET
Rule 9     vardecl -> tipodecl ID COLON LPAREN tipo BAR tipo RPAREN LBRACKET RBRACKET ASSIGN LBRACKET listexp RBRACKET
Rule 10    funcdecl -> signature
Rule 11    funcdecl -> signatureproto body
Rule 12    signature -> tipofunc ID LPAREN funcparametros RPAREN COLON tipo body
Rule 13    signature -> tipofunc ID LPAREN RPAREN COLON tipo body
Rule 14    signatureproto -> tipofunc ID LPAREN funcparametros RPAREN COLON tipo SEMICOLON
Rule 15    signatureproto -> tipofunc ID LPAREN RPAREN COLON tipo SEMICOLON
Rule 16    body -> LBRACE comandos RBRACE
Rule 17    tipofunc -> FUNCTION
Rule 18    tipofunc -> CONST
Rule 19    funcparametros -> ID COLON tipo COMMA funcparametros
Rule 20    funcparametros -> ID COLON tipo
Rule 21    comandos -> comando
Rule 22    comandos -> comando comandos
Rule 23    comando -> RETURN expressao SEMICOLON
Rule 24    comando -> expressao SEMICOLON
Rule 25    comando -> WHILE LPAREN expressao RPAREN bodyorcomando
Rule 26    comando -> IF LPAREN expressao RPAREN bodyorcomando
Rule 27    comando -> IF LPAREN expressao RPAREN bodyorcomando ELSE bodyorcomando
Rule 28    comando -> FOR LPAREN opexp SEMICOLON opexp SEMICOLON opexp RPAREN bodyorcomando
Rule 29    opexp -> expressao
Rule 30    opexp -> VOID
Rule 31    bodyorcomando -> body
Rule 32    bodyorcomando -> comando
Rule 33    expressao -> expressao PLUS expressao
Rule 34    expressao -> expressao MINUS expressao
Rule 35    expressao -> expressao TIMES expressao
Rule 36    expressao -> expressao DIVIDE expressao
Rule 37    expressao -> expressao MOD expressao
Rule 38    expressao -> expressao OR expressao
Rule 39    expressao -> expressao AND expressao
Rule 40    expressao -> expressao EQ expressao
Rule 41    expressao -> expressao NEQ expressao
Rule 42    expressao -> expressao GE expressao
Rule 43    expressao -> expressao LE expressao
Rule 44    expressao -> expressao LT expressao
Rule 45    expressao -> expressao GT expressao
Rule 46    expressao -> expressao INCREMENT
Rule 47    expressao -> expressao EXPO expressao
Rule 48    expressao -> expressao DECREMENT
Rule 49    expressao -> INCREMENTN expressao
Rule 50    expressao -> DECREMENTN expressao
Rule 51    expressao -> expressao TIMESINCREMENT expressao
Rule 52    expressao -> expressao DIVIDEINCREMENT expressao
Rule 53    expressao -> expressao MODINCREMENT expressao
Rule 54    expressao -> expressao EEQ expressao
Rule 55    expressao -> vardecl
Rule 56    expressao -> expressao NNEQ expressao
Rule 57    expressao -> expressao INTER expressao COLON expressao
Rule 58    expressao -> NINT
Rule 59    expressao -> NFLOAT
Rule 60    expressao -> HEXADECIMAL
Rule 61    expressao -> OCTAL
Rule 62    expressao -> string
Rule 63    expressao -> call
Rule 64    expressao -> assign
Rule 65    expressao -> ID
Rule 66    expressao -> FALSE
Rule 67    expressao -> TRUE
Rule 68    expressao -> NOT expressao
Rule 69    call -> ID LPAREN parametros RPAREN
Rule 70    call -> ID LPAREN RPAREN
Rule 71    parametros -> expressao COMMA parametros
Rule 72    parametros -> expressao
Rule 73    assign -> ID ASSIGN expressao
Rule 74    tipodecl -> LET
Rule 75    tipodecl -> VAR
Rule 76    tipodecl -> CONST tipo
Rule 77    tipo -> STRING
Rule 78    tipo -> NUMBER
Rule 79    tipo -> BOOLEAN
Rule 80    listexp -> expressao
Rule 81    listexp -> expressao COMMA listexp
Rule 82    string -> STRINGD
Rule 83    string -> STRINGS

Terminals, with rules where they appear

ABSTRACT             : 
AND                  : 39
ANY                  : 
AS                   : 
ASSERTS              : 
ASSIGN               : 6 7 8 9 73
ASYNC                : 
AWAIT                : 
BAR                  : 9
BOOLEAN              : 79
BREAK                : 
CASE                 : 
CATCH                : 
CLASS                : 
COLON                : 5 6 7 8 9 12 13 14 15 19 20 57
COMMA                : 19 71 81
COMMENT              : 
COMMENTMULTI         : 
CONST                : 18 76
CONSTRUCTOR          : 
CONTINUE             : 
DEBUGGER             : 
DECLARE              : 
DECREMENT            : 48
DECREMENTN           : 50
DEFAULT              : 
DELETE               : 
DIVIDE               : 36
DIVIDEINCREMENT      : 52
DO                   : 
DOT                  : 
DQUOTE               : 
EEQ                  : 54
ELSE                 : 27
ENUM                 : 
EQ                   : 40
EXPO                 : 47
EXPORT               : 
EXTENDS              : 
FALSE                : 66
FINALLY              : 
FOR                  : 28
FROM                 : 
FUNCTION             : 17
GE                   : 42
GET                  : 
GLOBAL               : 
GT                   : 45
HEXADECIMAL          : 60
ID                   : 5 6 7 8 9 12 13 14 15 19 20 65 69 70 73
IF                   : 26 27
IMPLEMENTS           : 
IMPORT               : 
IN                   : 
INCREMENT            : 46
INCREMENTN           : 49
INFER                : 
INSTANCEOF           : 
INTER                : 57
INTERFACE            : 
INTERNAL             : 
IS                   : 
KEYOF                : 
LBRACE               : 16
LBRACKET             : 7 7 8 8 9 9
LE                   : 43
LET                  : 74
LPAREN               : 9 12 13 14 15 25 26 27 28 69 70
LT                   : 44
MINUS                : 34
MOD                  : 37
MODINCREMENT         : 53
MODULE               : 
NAMESPACE            : 
NEQ                  : 41
NEVER                : 
NEW                  : 
NFLOAT               : 59
NINT                 : 58
NNEQ                 : 56
NOT                  : 68
NULL                 : 
NUMBER               : 78
OBJECT               : 
OCTAL                : 61
OF                   : 
OR                   : 38
PACKAGE              : 
PLUS                 : 33
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
RBRACE               : 16
RBRACKET             : 7 7 8 8 9 9
READONLY             : 
REQUIRE              : 
RETURN               : 23
RPAREN               : 9 12 13 14 15 25 26 27 28 69 70
SEMICOLON            : 14 15 23 24 28 28
SET                  : 
SQUOTE               : 
STATIC               : 
STRING               : 77
STRINGD              : 82
STRINGS              : 83
SUPER                : 
SWITCH               : 
SYMBOL               : 
THIS                 : 
THROW                : 
TIMES                : 35
TIMESINCREMENT       : 51
TRUE                 : 67
TRY                  : 
TYPE                 : 
TYPEOF               : 
UNDEFINED            : 
UNIQUE               : 
UNKNOWN              : 
VAR                  : 75
VOID                 : 30
WHILE                : 25
WITH                 : 
YIELD                : 
error                : 

Nonterminals, with rules where they appear

assign               : 64
body                 : 11 12 13 31
bodyorcomando        : 25 26 27 27 28
call                 : 63
comando              : 21 22 32
comandos             : 3 4 16 22
expressao            : 6 23 24 25 26 27 29 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 47 47 48 49 50 51 51 52 52 53 53 54 54 56 56 57 57 57 68 71 72 73 80 81
funcdecl             : 1 2
funcparametros       : 12 14 19
listexp              : 8 9 81
opexp                : 28 28 28
parametros           : 69 71
programa             : 2 4 0
signature            : 10
signatureproto       : 11
string               : 62
tipo                 : 5 6 7 8 9 9 12 13 14 15 19 20 76
tipodecl             : 5 6 7 8 9
tipofunc             : 12 13 14 15
vardecl              : 55

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . funcdecl
    (2) programa -> . funcdecl programa
    (3) programa -> . comandos
    (4) programa -> . comandos programa
    (10) funcdecl -> . signature
    (11) funcdecl -> . signatureproto body
    (21) comandos -> . comando
    (22) comandos -> . comando comandos
    (12) signature -> . tipofunc ID LPAREN funcparametros RPAREN COLON tipo body
    (13) signature -> . tipofunc ID LPAREN RPAREN COLON tipo body
    (14) signatureproto -> . tipofunc ID LPAREN funcparametros RPAREN COLON tipo SEMICOLON
    (15) signatureproto -> . tipofunc ID LPAREN RPAREN COLON tipo SEMICOLON
    (23) comando -> . RETURN expressao SEMICOLON
    (24) comando -> . expressao SEMICOLON
    (25) comando -> . WHILE LPAREN expressao RPAREN bodyorcomando
    (26) comando -> . IF LPAREN expressao RPAREN bodyorcomando
    (27) comando -> . IF LPAREN expressao RPAREN bodyorcomando ELSE bodyorcomando
    (28) comando -> . FOR LPAREN opexp SEMICOLON opexp SEMICOLON opexp RPAREN bodyorcomando
    (17) tipofunc -> . FUNCTION
    (18) tipofunc -> . CONST
    (33) expressao -> . expressao PLUS expressao
    (34) expressao -> . expressao MINUS expressao
    (35) expressao -> . expressao TIMES expressao
    (36) expressao -> . expressao DIVIDE expressao
    (37) expressao -> . expressao MOD expressao
    (38) expressao -> . expressao OR expressao
    (39) expressao -> . expressao AND expressao
    (40) expressao -> . expressao EQ expressao
    (41) expressao -> . expressao NEQ expressao
    (42) expressao -> . expressao GE expressao
    (43) expressao -> . expressao LE expressao
    (44) expressao -> . expressao LT expressao
    (45) expressao -> . expressao GT expressao
    (46) expressao -> . expressao INCREMENT
    (47) expressao -> . expressao EXPO expressao
    (48) expressao -> . expressao DECREMENT
    (49) expressao -> . INCREMENTN expressao
    (50) expressao -> . DECREMENTN expressao
    (51) expressao -> . expressao TIMESINCREMENT expressao
    (52) expressao -> . expressao DIVIDEINCREMENT expressao
    (53) expressao -> . expressao MODINCREMENT expressao
    (54) expressao -> . expressao EEQ expressao
    (55) expressao -> . vardecl
    (56) expressao -> . expressao NNEQ expressao
    (57) expressao -> . expressao INTER expressao COLON expressao
    (58) expressao -> . NINT
    (59) expressao -> . NFLOAT
    (60) expressao -> . HEXADECIMAL
    (61) expressao -> . OCTAL
    (62) expressao -> . string
    (63) expressao -> . call
    (64) expressao -> . assign
    (65) expressao -> . ID
    (66) expressao -> . FALSE
    (67) expressao -> . TRUE
    (68) expressao -> . NOT expressao
    (5) vardecl -> . tipodecl ID COLON tipo
    (6) vardecl -> . tipodecl ID COLON tipo ASSIGN expressao
    (7) vardecl -> . tipodecl ID COLON tipo LBRACKET RBRACKET ASSIGN LBRACKET RBRACKET
    (8) vardecl -> . tipodecl ID COLON tipo LBRACKET RBRACKET ASSIGN LBRACKET listexp RBRACKET
    (9) vardecl -> . tipodecl ID COLON LPAREN tipo BAR tipo RPAREN LBRACKET RBRACKET ASSIGN LBRACKET listexp RBRACKET
    (82) string -> . STRINGD
    (83) string -> . STRINGS
    (69) call -> . ID LPAREN parametros RPAREN
    (70) call -> . ID LPAREN RPAREN
    (73) assign -> . ID ASSIGN expressao
    (74) tipodecl -> . LET
    (75) tipodecl -> . VAR
    (76) tipodecl -> . CONST tipo

    RETURN          shift and go to state 9
    WHILE           shift and go to state 11
    IF              shift and go to state 12
    FOR             shift and go to state 13
    FUNCTION        shift and go to state 14
    CONST           shift and go to state 15
    INCREMENTN      shift and go to state 16
    DECREMENTN      shift and go to state 17
    NINT            shift and go to state 19
    NFLOAT          shift and go to state 20
    HEXADECIMAL     shift and go to state 21
    OCTAL           shift and go to state 22
    ID              shift and go to state 8
    FALSE           shift and go to state 26
    TRUE            shift and go to state 27
    NOT             shift and go to state 28
    STRINGD         shift and go to state 30
    STRINGS         shift and go to state 31
    LET             shift and go to state 32
    VAR             shift and go to state 33

    programa                       shift and go to state 1
    funcdecl                       shift and go to state 2
    comandos                       shift and go to state 3
    signature                      shift and go to state 4
    signatureproto                 shift and go to state 5
    comando                        shift and go to state 6
    tipofunc                       shift and go to state 7
    expressao                      shift and go to state 10
    vardecl                        shift and go to state 18
    string                         shift and go to state 23
    call                           shift and go to state 24
    assign                         shift and go to state 25
    tipodecl                       shift and go to state 29

state 1

    (0) S' -> programa .



state 2

    (1) programa -> funcdecl .
    (2) programa -> funcdecl . programa
    (1) programa -> . funcdecl
    (2) programa -> . funcdecl programa
    (3) programa -> . comandos
    (4) programa -> . comandos programa
    (10) funcdecl -> . signature
    (11) funcdecl -> . signatureproto body
    (21) comandos -> . comando
    (22) comandos -> . comando comandos
    (12) signature -> . tipofunc ID LPAREN funcparametros RPAREN COLON tipo body
    (13) signature -> . tipofunc ID LPAREN RPAREN COLON tipo body
    (14) signatureproto -> . tipofunc ID LPAREN funcparametros RPAREN COLON tipo SEMICOLON
    (15) signatureproto -> . tipofunc ID LPAREN RPAREN COLON tipo SEMICOLON
    (23) comando -> . RETURN expressao SEMICOLON
    (24) comando -> . expressao SEMICOLON
    (25) comando -> . WHILE LPAREN expressao RPAREN bodyorcomando
    (26) comando -> . IF LPAREN expressao RPAREN bodyorcomando
    (27) comando -> . IF LPAREN expressao RPAREN bodyorcomando ELSE bodyorcomando
    (28) comando -> . FOR LPAREN opexp SEMICOLON opexp SEMICOLON opexp RPAREN bodyorcomando
    (17) tipofunc -> . FUNCTION
    (18) tipofunc -> . CONST
    (33) expressao -> . expressao PLUS expressao
    (34) expressao -> . expressao MINUS expressao
    (35) expressao -> . expressao TIMES expressao
    (36) expressao -> . expressao DIVIDE expressao
    (37) expressao -> . expressao MOD expressao
    (38) expressao -> . expressao OR expressao
    (39) expressao -> . expressao AND expressao
    (40) expressao -> . expressao EQ expressao
    (41) expressao -> . expressao NEQ expressao
    (42) expressao -> . expressao GE expressao
    (43) expressao -> . expressao LE expressao
    (44) expressao -> . expressao LT expressao
    (45) expressao -> . expressao GT expressao
    (46) expressao -> . expressao INCREMENT
    (47) expressao -> . expressao EXPO expressao
    (48) expressao -> . expressao DECREMENT
    (49) expressao -> . INCREMENTN expressao
    (50) expressao -> . DECREMENTN expressao
    (51) expressao -> . expressao TIMESINCREMENT expressao
    (52) expressao -> . expressao DIVIDEINCREMENT expressao
    (53) expressao -> . expressao MODINCREMENT expressao
    (54) expressao -> . expressao EEQ expressao
    (55) expressao -> . vardecl
    (56) expressao -> . expressao NNEQ expressao
    (57) expressao -> . expressao INTER expressao COLON expressao
    (58) expressao -> . NINT
    (59) expressao -> . NFLOAT
    (60) expressao -> . HEXADECIMAL
    (61) expressao -> . OCTAL
    (62) expressao -> . string
    (63) expressao -> . call
    (64) expressao -> . assign
    (65) expressao -> . ID
    (66) expressao -> . FALSE
    (67) expressao -> . TRUE
    (68) expressao -> . NOT expressao
    (5) vardecl -> . tipodecl ID COLON tipo
    (6) vardecl -> . tipodecl ID COLON tipo ASSIGN expressao
    (7) vardecl -> . tipodecl ID COLON tipo LBRACKET RBRACKET ASSIGN LBRACKET RBRACKET
    (8) vardecl -> . tipodecl ID COLON tipo LBRACKET RBRACKET ASSIGN LBRACKET listexp RBRACKET
    (9) vardecl -> . tipodecl ID COLON LPAREN tipo BAR tipo RPAREN LBRACKET RBRACKET ASSIGN LBRACKET listexp RBRACKET
    (82) string -> . STRINGD
    (83) string -> . STRINGS
    (69) call -> . ID LPAREN parametros RPAREN
    (70) call -> . ID LPAREN RPAREN
    (73) assign -> . ID ASSIGN expressao
    (74) tipodecl -> . LET
    (75) tipodecl -> . VAR
    (76) tipodecl -> . CONST tipo

    $end            reduce using rule 1 (programa -> funcdecl .)
    RETURN          shift and go to state 9
    WHILE           shift and go to state 11
    IF              shift and go to state 12
    FOR             shift and go to state 13
    FUNCTION        shift and go to state 14
    CONST           shift and go to state 15
    INCREMENTN      shift and go to state 16
    DECREMENTN      shift and go to state 17
    NINT            shift and go to state 19
    NFLOAT          shift and go to state 20
    HEXADECIMAL     shift and go to state 21
    OCTAL           shift and go to state 22
    ID              shift and go to state 8
    FALSE           shift and go to state 26
    TRUE            shift and go to state 27
    NOT             shift and go to state 28
    STRINGD         shift and go to state 30
    STRINGS         shift and go to state 31
    LET             shift and go to state 32
    VAR             shift and go to state 33

    funcdecl                       shift and go to state 2
    programa                       shift and go to state 34
    comandos                       shift and go to state 3
    signature                      shift and go to state 4
    signatureproto                 shift and go to state 5
    comando                        shift and go to state 6
    tipofunc                       shift and go to state 7
    expressao                      shift and go to state 10
    vardecl                        shift and go to state 18
    string                         shift and go to state 23
    call                           shift and go to state 24
    assign                         shift and go to state 25
    tipodecl                       shift and go to state 29

state 3

    (3) programa -> comandos .
    (4) programa -> comandos . programa
    (1) programa -> . funcdecl
    (2) programa -> . funcdecl programa
    (3) programa -> . comandos
    (4) programa -> . comandos programa
    (10) funcdecl -> . signature
    (11) funcdecl -> . signatureproto body
    (21) comandos -> . comando
    (22) comandos -> . comando comandos
    (12) signature -> . tipofunc ID LPAREN funcparametros RPAREN COLON tipo body
    (13) signature -> . tipofunc ID LPAREN RPAREN COLON tipo body
    (14) signatureproto -> . tipofunc ID LPAREN funcparametros RPAREN COLON tipo SEMICOLON
    (15) signatureproto -> . tipofunc ID LPAREN RPAREN COLON tipo SEMICOLON
    (23) comando -> . RETURN expressao SEMICOLON
    (24) comando -> . expressao SEMICOLON
    (25) comando -> . WHILE LPAREN expressao RPAREN bodyorcomando
    (26) comando -> . IF LPAREN expressao RPAREN bodyorcomando
    (27) comando -> . IF LPAREN expressao RPAREN bodyorcomando ELSE bodyorcomando
    (28) comando -> . FOR LPAREN opexp SEMICOLON opexp SEMICOLON opexp RPAREN bodyorcomando
    (17) tipofunc -> . FUNCTION
    (18) tipofunc -> . CONST
    (33) expressao -> . expressao PLUS expressao
    (34) expressao -> . expressao MINUS expressao
    (35) expressao -> . expressao TIMES expressao
    (36) expressao -> . expressao DIVIDE expressao
    (37) expressao -> . expressao MOD expressao
    (38) expressao -> . expressao OR expressao
    (39) expressao -> . expressao AND expressao
    (40) expressao -> . expressao EQ expressao
    (41) expressao -> . expressao NEQ expressao
    (42) expressao -> . expressao GE expressao
    (43) expressao -> . expressao LE expressao
    (44) expressao -> . expressao LT expressao
    (45) expressao -> . expressao GT expressao
    (46) expressao -> . expressao INCREMENT
    (47) expressao -> . expressao EXPO expressao
    (48) expressao -> . expressao DECREMENT
    (49) expressao -> . INCREMENTN expressao
    (50) expressao -> . DECREMENTN expressao
    (51) expressao -> . expressao TIMESINCREMENT expressao
    (52) expressao -> . expressao DIVIDEINCREMENT expressao
    (53) expressao -> . expressao MODINCREMENT expressao
    (54) expressao -> . expressao EEQ expressao
    (55) expressao -> . vardecl
    (56) expressao -> . expressao NNEQ expressao
    (57) expressao -> . expressao INTER expressao COLON expressao
    (58) expressao -> . NINT
    (59) expressao -> . NFLOAT
    (60) expressao -> . HEXADECIMAL
    (61) expressao -> . OCTAL
    (62) expressao -> . string
    (63) expressao -> . call
    (64) expressao -> . assign
    (65) expressao -> . ID
    (66) expressao -> . FALSE
    (67) expressao -> . TRUE
    (68) expressao -> . NOT expressao
    (5) vardecl -> . tipodecl ID COLON tipo
    (6) vardecl -> . tipodecl ID COLON tipo ASSIGN expressao
    (7) vardecl -> . tipodecl ID COLON tipo LBRACKET RBRACKET ASSIGN LBRACKET RBRACKET
    (8) vardecl -> . tipodecl ID COLON tipo LBRACKET RBRACKET ASSIGN LBRACKET listexp RBRACKET
    (9) vardecl -> . tipodecl ID COLON LPAREN tipo BAR tipo RPAREN LBRACKET RBRACKET ASSIGN LBRACKET listexp RBRACKET
    (82) string -> . STRINGD
    (83) string -> . STRINGS
    (69) call -> . ID LPAREN parametros RPAREN
    (70) call -> . ID LPAREN RPAREN
    (73) assign -> . ID ASSIGN expressao
    (74) tipodecl -> . LET
    (75) tipodecl -> . VAR
    (76) tipodecl -> . CONST tipo

    $end            reduce using rule 3 (programa -> comandos .)
    RETURN          shift and go to state 9
    WHILE           shift and go to state 11
    IF              shift and go to state 12
    FOR             shift and go to state 13
    FUNCTION        shift and go to state 14
    CONST           shift and go to state 15
    INCREMENTN      shift and go to state 16
    DECREMENTN      shift and go to state 17
    NINT            shift and go to state 19
    NFLOAT          shift and go to state 20
    HEXADECIMAL     shift and go to state 21
    OCTAL           shift and go to state 22
    ID              shift and go to state 8
    FALSE           shift and go to state 26
    TRUE            shift and go to state 27
    NOT             shift and go to state 28
    STRINGD         shift and go to state 30
    STRINGS         shift and go to state 31
    LET             shift and go to state 32
    VAR             shift and go to state 33

    comandos                       shift and go to state 3
    programa                       shift and go to state 35
    funcdecl                       shift and go to state 2
    signature                      shift and go to state 4
    signatureproto                 shift and go to state 5
    comando                        shift and go to state 6
    tipofunc                       shift and go to state 7
    expressao                      shift and go to state 10
    vardecl                        shift and go to state 18
    string                         shift and go to state 23
    call                           shift and go to state 24
    assign                         shift and go to state 25
    tipodecl                       shift and go to state 29

state 4

    (10) funcdecl -> signature .

    RETURN          reduce using rule 10 (funcdecl -> signature .)
    WHILE           reduce using rule 10 (funcdecl -> signature .)
    IF              reduce using rule 10 (funcdecl -> signature .)
    FOR             reduce using rule 10 (funcdecl -> signature .)
    FUNCTION        reduce using rule 10 (funcdecl -> signature .)
    CONST           reduce using rule 10 (funcdecl -> signature .)
    INCREMENTN      reduce using rule 10 (funcdecl -> signature .)
    DECREMENTN      reduce using rule 10 (funcdecl -> signature .)
    NINT            reduce using rule 10 (funcdecl -> signature .)
    NFLOAT          reduce using rule 10 (funcdecl -> signature .)
    HEXADECIMAL     reduce using rule 10 (funcdecl -> signature .)
    OCTAL           reduce using rule 10 (funcdecl -> signature .)
    ID              reduce using rule 10 (funcdecl -> signature .)
    FALSE           reduce using rule 10 (funcdecl -> signature .)
    TRUE            reduce using rule 10 (funcdecl -> signature .)
    NOT             reduce using rule 10 (funcdecl -> signature .)
    STRINGD         reduce using rule 10 (funcdecl -> signature .)
    STRINGS         reduce using rule 10 (funcdecl -> signature .)
    LET             reduce using rule 10 (funcdecl -> signature .)
    VAR             reduce using rule 10 (funcdecl -> signature .)
    $end            reduce using rule 10 (funcdecl -> signature .)


state 5

    (11) funcdecl -> signatureproto . body
    (16) body -> . LBRACE comandos RBRACE

    LBRACE          shift and go to state 37

    body                           shift and go to state 36

state 6

    (21) comandos -> comando .
    (22) comandos -> comando . comandos
    (21) comandos -> . comando
    (22) comandos -> . comando comandos
    (23) comando -> . RETURN expressao SEMICOLON
    (24) comando -> . expressao SEMICOLON
    (25) comando -> . WHILE LPAREN expressao RPAREN bodyorcomando
    (26) comando -> . IF LPAREN expressao RPAREN bodyorcomando
    (27) comando -> . IF LPAREN expressao RPAREN bodyorcomando ELSE bodyorcomando
    (28) comando -> . FOR LPAREN opexp SEMICOLON opexp SEMICOLON opexp RPAREN bodyorcomando
    (33) expressao -> . expressao PLUS expressao
    (34) expressao -> . expressao MINUS expressao
    (35) expressao -> . expressao TIMES expressao
    (36) expressao -> . expressao DIVIDE expressao
    (37) expressao -> . expressao MOD expressao
    (38) expressao -> . expressao OR expressao
    (39) expressao -> . expressao AND expressao
    (40) expressao -> . expressao EQ expressao
    (41) expressao -> . expressao NEQ expressao
    (42) expressao -> . expressao GE expressao
    (43) expressao -> . expressao LE expressao
    (44) expressao -> . expressao LT expressao
    (45) expressao -> . expressao GT expressao
    (46) expressao -> . expressao INCREMENT
    (47) expressao -> . expressao EXPO expressao
    (48) expressao -> . expressao DECREMENT
    (49) expressao -> . INCREMENTN expressao
    (50) expressao -> . DECREMENTN expressao
    (51) expressao -> . expressao TIMESINCREMENT expressao
    (52) expressao -> . expressao DIVIDEINCREMENT expressao
    (53) expressao -> . expressao MODINCREMENT expressao
    (54) expressao -> . expressao EEQ expressao
    (55) expressao -> . vardecl
    (56) expressao -> . expressao NNEQ expressao
    (57) expressao -> . expressao INTER expressao COLON expressao
    (58) expressao -> . NINT
    (59) expressao -> . NFLOAT
    (60) expressao -> . HEXADECIMAL
    (61) expressao -> . OCTAL
    (62) expressao -> . string
    (63) expressao -> . call
    (64) expressao -> . assign
    (65) expressao -> . ID
    (66) expressao -> . FALSE
    (67) expressao -> . TRUE
    (68) expressao -> . NOT expressao
    (5) vardecl -> . tipodecl ID COLON tipo
    (6) vardecl -> . tipodecl ID COLON tipo ASSIGN expressao
    (7) vardecl -> . tipodecl ID COLON tipo LBRACKET RBRACKET ASSIGN LBRACKET RBRACKET
    (8) vardecl -> . tipodecl ID COLON tipo LBRACKET RBRACKET ASSIGN LBRACKET listexp RBRACKET
    (9) vardecl -> . tipodecl ID COLON LPAREN tipo BAR tipo RPAREN LBRACKET RBRACKET ASSIGN LBRACKET listexp RBRACKET
    (82) string -> . STRINGD
    (83) string -> . STRINGS
    (69) call -> . ID LPAREN parametros RPAREN
    (70) call -> . ID LPAREN RPAREN
    (73) assign -> . ID ASSIGN expressao
    (74) tipodecl -> . LET
    (75) tipodecl -> . VAR
    (76) tipodecl -> . CONST tipo

  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for INCREMENTN resolved as shift
  ! shift/reduce conflict for DECREMENTN resolved as shift
  ! shift/reduce conflict for NINT resolved as shift
  ! shift/reduce conflict for NFLOAT resolved as shift
  ! shift/reduce conflict for HEXADECIMAL resolved as shift
  ! shift/reduce conflict for OCTAL resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for STRINGD resolved as shift
  ! shift/reduce conflict for STRINGS resolved as shift
  ! shift/reduce conflict for LET resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for CONST resolved as shift
    FUNCTION        reduce using rule 21 (comandos -> comando .)
    $end            reduce using rule 21 (comandos -> comando .)
    RBRACE          reduce using rule 21 (comandos -> comando .)
    RETURN          shift and go to state 9
    WHILE           shift and go to state 11
    IF              shift and go to state 12
    FOR             shift and go to state 13
    INCREMENTN      shift and go to state 16
    DECREMENTN      shift and go to state 17
    NINT            shift and go to state 19
    NFLOAT          shift and go to state 20
    HEXADECIMAL     shift and go to state 21
    OCTAL           shift and go to state 22
    ID              shift and go to state 8
    FALSE           shift and go to state 26
    TRUE            shift and go to state 27
    NOT             shift and go to state 28
    STRINGD         shift and go to state 30
    STRINGS         shift and go to state 31
    LET             shift and go to state 32
    VAR             shift and go to state 33
    CONST           shift and go to state 39

  ! RETURN          [ reduce using rule 21 (comandos -> comando .) ]
  ! WHILE           [ reduce using rule 21 (comandos -> comando .) ]
  ! IF              [ reduce using rule 21 (comandos -> comando .) ]
  ! FOR             [ reduce using rule 21 (comandos -> comando .) ]
  ! CONST           [ reduce using rule 21 (comandos -> comando .) ]
  ! INCREMENTN      [ reduce using rule 21 (comandos -> comando .) ]
  ! DECREMENTN      [ reduce using rule 21 (comandos -> comando .) ]
  ! NINT            [ reduce using rule 21 (comandos -> comando .) ]
  ! NFLOAT          [ reduce using rule 21 (comandos -> comando .) ]
  ! HEXADECIMAL     [ reduce using rule 21 (comandos -> comando .) ]
  ! OCTAL           [ reduce using rule 21 (comandos -> comando .) ]
  ! ID              [ reduce using rule 21 (comandos -> comando .) ]
  ! FALSE           [ reduce using rule 21 (comandos -> comando .) ]
  ! TRUE            [ reduce using rule 21 (comandos -> comando .) ]
  ! NOT             [ reduce using rule 21 (comandos -> comando .) ]
  ! STRINGD         [ reduce using rule 21 (comandos -> comando .) ]
  ! STRINGS         [ reduce using rule 21 (comandos -> comando .) ]
  ! LET             [ reduce using rule 21 (comandos -> comando .) ]
  ! VAR             [ reduce using rule 21 (comandos -> comando .) ]

    comando                        shift and go to state 6
    comandos                       shift and go to state 38
    expressao                      shift and go to state 10
    vardecl                        shift and go to state 18
    string                         shift and go to state 23
    call                           shift and go to state 24
    assign                         shift and go to state 25
    tipodecl                       shift and go to state 29

state 7

    (12) signature -> tipofunc . ID LPAREN funcparametros RPAREN COLON tipo body
    (13) signature -> tipofunc . ID LPAREN RPAREN COLON tipo body
    (14) signatureproto -> tipofunc . ID LPAREN funcparametros RPAREN COLON tipo SEMICOLON
    (15) signatureproto -> tipofunc . ID LPAREN RPAREN COLON tipo SEMICOLON

    ID              shift and go to state 40


state 8

    (65) expressao -> ID .
    (69) call -> ID . LPAREN parametros RPAREN
    (70) call -> ID . LPAREN RPAREN
    (73) assign -> ID . ASSIGN expressao

    SEMICOLON       reduce using rule 65 (expressao -> ID .)
    PLUS            reduce using rule 65 (expressao -> ID .)
    MINUS           reduce using rule 65 (expressao -> ID .)
    TIMES           reduce using rule 65 (expressao -> ID .)
    DIVIDE          reduce using rule 65 (expressao -> ID .)
    MOD             reduce using rule 65 (expressao -> ID .)
    OR              reduce using rule 65 (expressao -> ID .)
    AND             reduce using rule 65 (expressao -> ID .)
    EQ              reduce using rule 65 (expressao -> ID .)
